fixed wrap

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body::selection {
 }
 
 .firstPage {
-    width: 97vw;
+    width: 100%;
     height: auto;
     background: #bed3e0;
 }
@@ -28,10 +28,13 @@ Header {
     border-top: 14px solid white;
     position: fixed;
     top: 0;
-    width: 95vw;
+    width: 100vw;
     padding: 1%;
+    padding-right:3% ;
+    box-sizing: border-box;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-between;
+    
 }
 
 Header ul {
@@ -67,7 +70,8 @@ Header :nth-child(2) img {
 }
 
 Header :nth-child(2) li {
-    font-size: small;
+    font-weight: 700;
+    font-size:small;
     margin-top: 3px;
 }
 
@@ -282,7 +286,7 @@ main {
     height: auto;
     padding: 4% 15% 8% 0%;
 }
-
+ 
 .content h2 {
     font-weight: 320;
     font-size: 2.6rem;
@@ -290,6 +294,9 @@ main {
 }
 
 .content p {
+    font-size: large;
+    word-spacing: 1;
+    font-weight: 400;
     line-height: 1.8;
     padding: 2.5%;
 }
